--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 body{
 	padding: 0px;
 	margin: 0px; 
-	background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.9)), url(back.jpg) no-repeat center;
+	background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.9)), url(back.jpg) no-repeat center;
 	background-size: cover;
 	height: 100vh;
+}
+section{
+width: 93%;
+background-color: #E97171;
+padding-bottom: 1%;
+margin-left: 4%;
+border-radius: 10px;
+margin-top: 2%;
+justify-content: space-around;
 }
